This commit was manufactured by cvs2svn to create tag 'MMBase-1_9_0-alpha-2006'.