@@ -16,7 +16,7 @@ import org.mmbase.bridge.jsp.taglib.TaglibException;
 import org.mmbase.bridge.jsp.taglib.ContextTag;
 import org.mmbase.bridge.NotFoundException;
 import java.net.*;
-
+//import javax.net.ssl.*;
 import java.io.*;
 import javax.servlet.jsp.JspTagException;
 import javax.servlet.jsp.tagext.BodyContent;
@@ -34,12 +34,12 @@ import org.mmbase.util.logging.Logging;
  *
  * @author Michiel Meeuwissen
  * @author Johannes Verelst
- * @version $Id: IncludeTag.java,v 1.77 2007-06-28 18:22:45 michiel Exp $
+ * @version $Id: IncludeTag.java,v 1.67 2006-09-29 10:07:14 michiel Exp $
  */
 
 public class IncludeTag extends UrlTag {
 
-    private static  final Logger log     = Logging.getLoggerInstance(IncludeTag.class);
+    private static  final Logger log = Logging.getLoggerInstance(IncludeTag.class);
     private static  final Logger pageLog = Logging.getLoggerInstance(Logging.PAGE_CATEGORY);
 
     private static final int DEBUG_NONE = 0;
@@ -50,12 +50,10 @@ public class IncludeTag extends UrlTag {
     public static final String INCLUDE_PATH_KEY   = "javax.servlet.include.servlet_path";
     public static final String INCLUDE_LEVEL_KEY = "org.mmbase.taglib.includeLevel";
 
-    protected static int MAX_INCLUDE_LEVEL = -1;
 
+    protected Attribute debugType = Attribute.NULL;
 
-    protected Attribute debugType       = Attribute.NULL;
-
-    private Attribute cite              = Attribute.NULL;
+    private Attribute cite = Attribute.NULL;
 
     private Attribute encodingAttribute = Attribute.NULL;
 
@@ -64,8 +62,6 @@ public class IncludeTag extends UrlTag {
     protected Attribute notFound        = Attribute.NULL;
 
     protected Attribute resource        = Attribute.NULL;
-
-    protected Attribute timeOut        = Attribute.NULL;
     //protected Attribute configuration   = Attribute.NULL;
 
 
@@ -95,12 +91,6 @@ public class IncludeTag extends UrlTag {
     public void setResource(String r) throws JspTagException {
         resource = getAttribute(r);
     }
-    /**
-     * @since MMBase-1.8.5
-     */
-    public void setTimeout(String t) throws JspTagException {
-        timeOut = getAttribute(t);
-    }
     /*
     public void setConfiguration(String r) throws JspTagException {
         configuration = getAttribute(r);
@@ -112,12 +102,14 @@ public class IncludeTag extends UrlTag {
         return super.getPage();
     }
 
-    
     public int doStartTag() throws JspTagException {
-        initTag(true);
-        return EVAL_BODY_BUFFERED;
+        if (page == Attribute.NULL && resource == Attribute.NULL 
+            //&& configuration == Attribute.NULL
+            ) { // for include tags, page attribute is obligatory.
+            throw new JspTagException("No attribute 'page' or 'resource' was specified");
+        }
+        return super.doStartTag();
     }
-
 
     protected void doAfterBodySetValue() throws JspTagException {
         includePage();
@@ -133,23 +125,18 @@ public class IncludeTag extends UrlTag {
             URL includeURL = new URL(absoluteUrl);
 
             HttpURLConnection connection = (HttpURLConnection) includeURL.openConnection();
-            int to = timeOut.getInt(this, 10000);
-            connection.setConnectTimeout(to);
-            connection.setReadTimeout(to);
 
             if (request != null) {
                 // Also propagate the cookies (like the jsession...)
                 // Then these, and the session,  also can be used in the include-d page
                 Cookie[] cookies = request.getCookies();
                 if (cookies != null) {
-                    StringBuilder koekjes = new StringBuilder();
-                    String sep = "";
-                    for (Cookie cookie : cookies) {
+                    StringBuffer koekjes = new StringBuffer();
+                    for (int i=0; i < cookies.length; i++) {
                         if (log.isDebugEnabled()) {
-                            log.debug("setting cookie:" + cookie.getName() + "=" + cookie.getValue());
+                            log.debug("setting cookie " + i + ":" + cookies[i].getName() + "=" + cookies[i].getValue());
                         }
-                        koekjes.append(sep).append(cookie.getName()).append("=").append(cookie.getValue());
-                        sep = ";";
+                        koekjes.append((i > 0 ? ";" : "")).append(cookies[i].getName()).append("=").append(cookies[i].getValue());
                     }
                     connection.setRequestProperty("Cookie", koekjes.toString());
                 }
@@ -205,40 +192,50 @@ public class IncludeTag extends UrlTag {
             } catch (java.net.ConnectException ce) {
                 result = "For " + includeURL + ": " + ce.getMessage();
                 responseCode = -1;
-            } catch (java.net.SocketTimeoutException ste) {
-                result = "";
-                responseCode = -2;
             }
-
 
             handleResponse(responseCode, result, absoluteUrl);
 
             if (log.isDebugEnabled()) {
                 log.debug("found string: " + helper.getValue());
             }
+
         } catch (IOException e) {
             throw new TaglibException (e.getMessage(), e);
         }
     }
 
     /**
+     * Include a local file by doing a new HTTP request
+     * Do not use this method, but use the 'internal()' method instead
+     */
+    private void externalRelative(BodyContent bodyContent, String relativeUrl, HttpServletRequest request, HttpServletResponse response) throws JspTagException {
+        external(bodyContent,
+                 request.getScheme() + "://" + request.getServerName() + ":" + request.getServerPort() + relativeUrl,
+                 request, response);
+    }
+
+
+    protected boolean addContext() {
+        return false;
+    }
+
+    /**
      * @since MMBase-1.8
      */
     protected void handleResponse(int code, String result, String url) throws JspTagException {
-        pageContext.setAttribute("_responseCode", code);
-        log.info("" + code);
-        String output;
+
+        String page;
         switch(code) {
-        case -2:
         case 200:
-            output = result;
+            page = result;
             break;
         default:
         case 404:
             switch(Notfound.get(notFound, this)) {
             case Notfound.SKIP:
             case Notfound.PROVIDENULL:
-                output = "";
+                page = "";
                 break;
             case Notfound.THROW:
                 if ("".equals(result)) result = "The requested resource '" + url + "' is not available";
@@ -247,11 +244,11 @@ public class IncludeTag extends UrlTag {
             case Notfound.DEFAULT:
             case Notfound.MESSAGE:
                 if ("".equals(result)) result = "The requested resource '" + url + "' is not available";
-                output = result;
+                page = result;
             }
             break;
         }
-        helper.setValue(debugStart(url) + output + debugEnd(url));
+        helper.setValue(debugStart(url) + page + debugEnd(url));
     }
     /**
      * Use the RequestDispatcher to include a page without doing a request.
@@ -280,10 +277,10 @@ public class IncludeTag extends UrlTag {
         req.removeAttribute(ContextTag.CONTEXTTAG_KEY);
 
         if (attributes != Attribute.NULL) {
-            Iterator<Map.Entry<String, Object>> i = Referids.getReferids(attributes, this).entrySet().iterator();
+            Iterator i = Referids.getReferids(attributes, this).entrySet().iterator();
             while (i.hasNext()) {
-                Map.Entry<String, Object> entry = i.next();
-                req.setAttribute(entry.getKey(), entry.getValue());
+                Map.Entry entry = (Map.Entry) i.next();
+                req.setAttribute((String) entry.getKey(), entry.getValue());
             }
 
         }
@@ -385,22 +382,8 @@ public class IncludeTag extends UrlTag {
      * Includes another page in the current page.
      */
     protected void includePage() throws JspTagException {
-        if (MAX_INCLUDE_LEVEL == -1) {
-            String s =  pageContext.getServletContext().getInitParameter("mmbase.taglib.max_include_level");
-            if (s != null && ! "".equals(s)) {
-                MAX_INCLUDE_LEVEL = Integer.parseInt(s);
-            }
-            if (MAX_INCLUDE_LEVEL == -1) {
-                MAX_INCLUDE_LEVEL = 50;
-            }
-        }
-
         try {
-            String gotUrl = url == null ? null : url.get(false);
-            if (gotUrl == null) {
-                gotUrl = page.getString(this);
-                pageLog.service("No URL object found, using: " + gotUrl);
-            }
+            String gotUrl = getUrl(false, false); // false, false: don't write &amp; tags but real & and don't urlEncode
 
             if (gotUrl == null || "".equals(gotUrl)) {
                 return; //if there is no url, we cannot include
@@ -465,27 +448,23 @@ public class IncludeTag extends UrlTag {
 
                 // Increase level and put it together with the new URI in the Attributes of the request
                 includeLevel++;
-                request.setAttribute(INCLUDE_LEVEL_KEY, Integer.valueOf(includeLevel));
+                request.setAttribute(INCLUDE_LEVEL_KEY, new Integer(includeLevel));
 
                 if (log.isDebugEnabled()) {
                     log.debug("Next Include: Level=" + includeLevel + " URI=" + includedServlet);
                 }
 
-                if (includeLevel < MAX_INCLUDE_LEVEL) {
-                    if (getCite()) {
-                        cite(bodyContent, includedServlet, request);
-                    } else {
-                        internal(bodyContent, includedServlet, request, response);
-                    }
+                if (getCite()) {
+                    cite(bodyContent, includedServlet, request);
                 } else {
-                    log.error("TOO DEEP mm:include recursion (" + includedServlet + ")");
+                    internal(bodyContent, includedServlet, request, response);
                 }
                 // Reset include level and URI to previous state
                 includeLevel--;
                 if (includeLevel == 0) {
                     request.removeAttribute(INCLUDE_LEVEL_KEY);
                 } else {
-                    request.setAttribute(INCLUDE_LEVEL_KEY, Integer.valueOf(includeLevel));
+                    request.setAttribute(INCLUDE_LEVEL_KEY, new Integer(includeLevel));
                 }
 
             } else { // really absolute
