@@ -31,13 +31,19 @@ import org.w3c.dom.Document;
  * here, to minimalize the implementation effort of fully implemented Nodes.
  *
  * @author Michiel Meeuwissen
- * @version $Id: AbstractNode.java,v 1.20 2007-06-21 07:32:31 pierre Exp $
+ * @version $Id: AbstractNode.java,v 1.15 2006-09-25 10:17:36 pierre Exp $
  * @see org.mmbase.bridge.Node
  * @since MMBase-1.8
  */
 public abstract class AbstractNode implements Node {
     private static final Logger log = Logging.getLoggerInstance(AbstractNode.class);
 
+    protected static final int ACTION_CREATE = 1; // create a node
+    protected static final int ACTION_EDIT   = 2; // edit node, or change aliasses
+    protected static final int ACTION_DELETE = 3; // delete node
+    protected static final int ACTION_COMMIT = 10; // commit a node after changes
+
+    protected abstract void edit(int action);
 
     public boolean isRelation() {
         return false;
@@ -101,12 +107,6 @@ public abstract class AbstractNode implements Node {
             }
         }
     }
-    /**
-     * Throws exception if may not write current node
-     * @since MMBase-1.9
-     */
-    protected void checkWrite() {
-    }
 
     /**
      * Like setObjectValue, but without processing, this is called by the other set-values.
@@ -117,7 +117,7 @@ public abstract class AbstractNode implements Node {
      * @since MMBase-1.7
      */
     public void setValueWithoutProcess(String fieldName, Object value) {
-        checkWrite();
+        edit(ACTION_EDIT);
         if ("owner".equals(fieldName)) {
             setContext(Casting.toString(value));
             return;
@@ -162,10 +162,10 @@ public abstract class AbstractNode implements Node {
         if (v == null) {
             return null;
         } else if (v instanceof Node) {
-            return Integer.valueOf(((Node)v).getNumber());
+            return new Integer(((Node)v).getNumber());
         } else {
             // giving up
-            return Integer.valueOf(getCloud().getNode(v.toString()).getNumber());
+            return new Integer(getCloud().getNode(v.toString()).getNumber());
         }
     }
 
@@ -177,25 +177,25 @@ public abstract class AbstractNode implements Node {
 
     public final void setIntValue(String fieldName, final int value) {
         Field field = getNodeManager().getField(fieldName);
-        Object v = field.getDataType().getProcessor(DataType.PROCESS_SET, Field.TYPE_INTEGER).process(this, field, Integer.valueOf(value));
+        Object v = field.getDataType().getProcessor(DataType.PROCESS_SET, Field.TYPE_INTEGER).process(this, field, new Integer(value));
         setValueWithoutProcess(fieldName, v);
     }
 
     public final void setLongValue(String fieldName, final long value) {
         Field field = getNodeManager().getField(fieldName);
-        Object v = field.getDataType().getProcessor(DataType.PROCESS_SET, Field.TYPE_LONG).process(this, field, Long.valueOf(value));
+        Object v = field.getDataType().getProcessor(DataType.PROCESS_SET, Field.TYPE_LONG).process(this, field, new Long(value));
         setValueWithoutProcess(fieldName, v);
     }
 
     public final void setFloatValue(String fieldName, final float value) {
         Field field = getNodeManager().getField(fieldName);
-        Object v = field.getDataType().getProcessor(DataType.PROCESS_SET, Field.TYPE_FLOAT).process(this, field, Float.valueOf(value));
+        Object v = field.getDataType().getProcessor(DataType.PROCESS_SET, Field.TYPE_FLOAT).process(this, field, new Float(value));
         setValueWithoutProcess(fieldName, v);
     }
 
     public final void setDoubleValue(String fieldName, final double value) {
         Field field = getNodeManager().getField(fieldName);
-        Object v = field.getDataType().getProcessor(DataType.PROCESS_SET, Field.TYPE_DOUBLE).process(this, field, Double.valueOf(value));
+        Object v = field.getDataType().getProcessor(DataType.PROCESS_SET, Field.TYPE_DOUBLE).process(this, field, new Double(value));
         setValueWithoutProcess(fieldName, v);
     }
 
@@ -270,17 +270,17 @@ public abstract class AbstractNode implements Node {
             switch(type) {
                 case Field.TYPE_STRING:  return getStringValue(fieldName);
                 case Field.TYPE_BINARY:    return getByteValue(fieldName);
-                case Field.TYPE_INTEGER: return Integer.valueOf(getIntValue(fieldName));
-                case Field.TYPE_FLOAT:   return Float.valueOf(getFloatValue(fieldName));
-                case Field.TYPE_DOUBLE:  return Double.valueOf(getDoubleValue(fieldName));
-                case Field.TYPE_LONG:    return Long.valueOf(getLongValue(fieldName));
+                case Field.TYPE_INTEGER: return new Integer(getIntValue(fieldName));
+                case Field.TYPE_FLOAT:   return new Float(getFloatValue(fieldName));
+                case Field.TYPE_DOUBLE:  return new Double(getDoubleValue(fieldName));
+                case Field.TYPE_LONG:    return new Long(getLongValue(fieldName));
                 case Field.TYPE_XML:     return getXMLValue(fieldName);
                 case Field.TYPE_NODE:   {
                     // number is a NODE field, but should be returned as
                     // a number (in this case, a long)
                     // in the future, we may change the basic MMBase type for the number field to ID
                     if ("number".equals(fieldName)) {
-                        return Long.valueOf(getLongValue(fieldName));
+                        return new Long(getLongValue(fieldName));
                     } else {
                         return getNodeValue(fieldName);
                     }
@@ -354,7 +354,7 @@ public abstract class AbstractNode implements Node {
     }
 
     public float getFloatValue(String fieldName) {
-        Float result = Float.valueOf(Casting.toFloat(getValueWithoutProcess(fieldName)));
+        Float result = new Float(Casting.toFloat(getValueWithoutProcess(fieldName)));
         NodeManager nodeManager = getNodeManager();
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
             Field field = nodeManager.getField(fieldName);
@@ -364,7 +364,7 @@ public abstract class AbstractNode implements Node {
     }
 
     public long getLongValue(String fieldName) {
-        Long result = Long.valueOf(Casting.toLong(getValueWithoutProcess(fieldName)));
+        Long result = new Long(Casting.toLong(getValueWithoutProcess(fieldName)));
         NodeManager nodeManager = getNodeManager();
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
             Field field = nodeManager.getField(fieldName);
@@ -374,7 +374,7 @@ public abstract class AbstractNode implements Node {
     }
 
     public double getDoubleValue(String fieldName) {
-        Double result = Double.valueOf(Casting.toDouble(getValueWithoutProcess(fieldName)));
+        Double result = new Double(Casting.toDouble(getValueWithoutProcess(fieldName)));
         NodeManager nodeManager = getNodeManager();
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
             Field field = nodeManager.getField(fieldName);
@@ -449,7 +449,7 @@ public abstract class AbstractNode implements Node {
         return (Element)tree.importNode(doc.getDocumentElement(), true);
     }
 
-    public final void processCommit() {
+    protected final void processCommit() {
         FieldIterator fi = getNodeManager().getFields().fieldIterator();
         while (fi.hasNext()) {
             Field field = fi.nextField();
@@ -457,30 +457,23 @@ public abstract class AbstractNode implements Node {
         }
     }
 
-    public Collection<String> validate() {
-        List<String> errors = new ArrayList<String>();
+    public Collection validate() {
+        List errors = new ArrayList();
         FieldIterator fi = getNodeManager().getFields().fieldIterator();
         Locale locale = getCloud().getLocale();
         while (fi.hasNext()) {
             Field field = fi.nextField();
-            // don't validate read-only (cannot be changed) or virtual fields (are not stored).
-            // Specifically, the 'number' field must not be validated, because for new nodes it does not yet
-            // point to an existing node... 
-	    // TODO: the number field should not be a NODE field
-	    // TODO: possibly virtual fields DO need validation? How about temporary fields?
             if (! field.isReadOnly() && !field.isVirtual()) {
-		// Only change a field if the enforcestrength of the restrictions is
-		// applicable to the change.
-                int enforceStrength = field.getDataType().getEnforceStrength();
-                if ((enforceStrength > DataType.ENFORCE_ONCHANGE) || 
-		    (isChanged(field.getName()) && (enforceStrength >= DataType.ENFORCE_ONCREATE)) ||
-	            (isNew() && (enforceStrength >= DataType.ENFORCE_NEVER))) {
-                    Object value = getValueWithoutProcess(field.getName());
-                    Collection<LocalizedString> fieldErrors = field.getDataType().validate(value, this, field);
-                    for (LocalizedString error : fieldErrors) {
-                        errors.add("field '" + field.getName() + "' with value '" + value + "': " + // TODO need to i18n this intro too
-                                   error.get(locale));
-                    }
+                // don't validate read-only fields. Users cannot have edited those.  Most noticably,
+                // the _number_ field must not be validated, because for new nodes it does not yet
+                // point to an existing node... I think the number field should not be a NODE field...
+                Object value = getValueWithoutProcess(field.getName());
+                Collection fieldErrors = field.getDataType().validate(value, this, field);
+                Iterator i = fieldErrors.iterator();
+                while(i.hasNext()) {
+                    LocalizedString error = (LocalizedString) i.next();
+                    errors.add("field '" + field.getName() + "' with value '" + value + "': " + // TODO need to i18n this intro too
+                               error.get(locale));
                 }
             }
         }
@@ -555,7 +548,7 @@ public abstract class AbstractNode implements Node {
      * and +1 if the object passed is a NodeManager and smaller than this manager.
      */
     public final int compareTo(Node o) {
-        Node n = o;
+        Node n = (Node)o;
         String s1 = "";
         if (this instanceof NodeManager) {
             s1 = ((NodeManager)this).getGUIName();
@@ -586,7 +579,7 @@ public abstract class AbstractNode implements Node {
             } else {
                 Cloud c = getCloud();
                 if (c instanceof Comparable) {
-                    return ((Comparable<Cloud>) c).compareTo(n.getCloud());
+                    return ((Comparable) c).compareTo(n.getCloud());
                 } else {
                     return 0;
                 }
@@ -605,8 +598,8 @@ public abstract class AbstractNode implements Node {
     public boolean isChanged() {
         return false;
     }
-    public Set<String> getChanged() {
-        return Collections.emptySet();
+    public Set getChanged() {
+        return Collections.EMPTY_SET;
     }
 
     public void commit() {
@@ -691,13 +684,8 @@ public abstract class AbstractNode implements Node {
      *
      * @see java.lang.Object#equals(java.lang.Object)
      */
-    @Override
     public final boolean equals(Object o) {
         return (o instanceof Node) && getNumber() == ((Node)o).getNumber() && getCloud().equals(((Node)o).getCloud());
-    }
-    @Override
-    public final int hashCode() {
-        return 127 * getNumber();
     }
 
 
@@ -707,7 +695,6 @@ public abstract class AbstractNode implements Node {
 
     protected FieldValue createFunctionValue(final Object result) {
         return new AbstractFieldValue(this, getCloud()) {
-            @Override
             public Object get() {
                 return result;
             }
@@ -731,7 +718,6 @@ public abstract class AbstractNode implements Node {
             throw new NotFoundException("Function with name " + functionName + " does not exist on node " + getNumber() + " of type " + getNodeManager().getName() + "(known are " + getFunctions() + ")");
         }
         return new WrappedFunction(function) {
-                @Override
                 public final Object getFunctionValue(Parameters params) {
                     params.setIfDefined(Parameter.NODE, AbstractNode.this);
                     params.setIfDefined(Parameter.CLOUD, AbstractNode.this.getCloud());
